--- a/README
+++ b/README
@@ -91,3 +91,6 @@
  are potentially subject to such restrictions you should seek competent
  professional legal advice before attempting to develop or distribute
  cryptographic code.
+
+
+ ./Configure  linux-x86_64 --prefix=/root/tasshsm_engine/tassl --shared 
